Issue-91: Resolve misaligned nav items

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -146,7 +146,12 @@
 
 @media screen and (min-width: 768px) {
   .navBar {
+    display: flex;
     gap: var(--size-3);
+  }
+
+  .navBar > nav {
+    align-self: center;
   }
 
   .socialTray {
